[gd_scene load_steps=4 format=3 uid="uid://dxtawmj1md4fp"]

[ext_resource type="PackedScene" uid="uid://diaq53qbtc6s0" path="res://scenes/ui/card_ui.tscn" id="1_e4d0m"]
[ext_resource type="Script" uid="uid://b0b2s28xd7e7x" path="res://scripts/ui/pile_modal.gd" id="1_jvc6c"]
[ext_resource type="Script" uid="uid://x6xjylp2pxcb" path="res://scripts/ui/pile_panel_container.gd" id="2_jvc6c"]

[node name="PileModal" type="PanelContainer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -320.0
offset_right = 199.0
offset_bottom = 295.0
grow_horizontal = 2
script = ExtResource("1_jvc6c")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="PilePanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
theme_type_variation = &"PilePanelContainer"
script = ExtResource("2_jvc6c")
metadata/_custom_type_script = "uid://x6xjylp2pxcb"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PilePanelContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/PilePanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/PilePanelContainer/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="PileNameLabel" type="Label" parent="MarginContainer/PilePanelContainer/VBoxContainer/PanelContainer/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Descarte"

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/PilePanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PilePanelContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="GridContainer" type="GridContainer" parent="MarginContainer/PilePanelContainer/VBoxContainer/ScrollContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
columns = 8

[node name="CardUI" parent="MarginContainer/PilePanelContainer/VBoxContainer/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource("1_e4d0m")]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/PilePanelContainer/VBoxContainer"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="MarginContainer/PilePanelContainer/VBoxContainer/CenterContainer"]
layout_mode = 2
text = "cerrar"

[connection signal="pressed" from="MarginContainer/PilePanelContainer/VBoxContainer/CenterContainer/CloseButton" to="." method="_on_close_button_pressed"]
